# rdify

./: .gitignore  pyproject.toml
src/dify_llvm/: app.py  config.py  llm_models.py  log_config.yaml  models.py  openai_schemas.py
src/dify_llvm/apps/: fake_llvm.py
src/dify_llvm/apps/dify/: core.py  schemas.py
src/rdify/: app.py  config.py  llm_models.py  log_config.yaml  openai_schemas.py
src/rdify/apps/: fake_llvm.py  redirect_llm.py  run_task_llm.py
src/rdify/apps/dify/: __init__.py  core.py  extra_api.py  router.py  schemas.py
src/rdify/utils/: cancel_scope.py  thread_bridge.py
tests/: conftest.py  test_dify.py  test_moonshot_connection.py  test_openai_api.py  test_run_task.py  test_toolcall.py
tests/data/: dify_trans.json
